# screen-monitor

./: .gitignore  Pipfile  README.md  flake.nix  main.py  pyproject.toml  tasks.md  tests.py
docs/: README.md  architecture.md  development.md  portal-flow.md  troubleshooting.md  zero-blink-capture.md
src/: capture.py  process.py  volume.py
tests/: README.md  test_capture_token_store.py  test_check_image_presence.py
