[project]
name = "screen-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "comtypes>=1.4.13",
    "dbus-python>=1.4.0",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "pyautogui>=0.9.54",
    "pycaw>=20251023",
    "pygobject>=3.54.5",
    "pyscreenshot>=3.1",
]
